[gd_scene format=3 uid="uid://cg5w7ddq0jgkb"]

[ext_resource type="Script" uid="uid://dedtpr0f82sk6" path="res://scenes/enemies/sweep_enemy.gd" id="1_igua1"]
[ext_resource type="Texture2D" uid="uid://bmuh5h33os836" path="res://assets/sprites/misc/Arrow.png" id="2_xecti"]
[ext_resource type="Texture2D" uid="uid://c8tbayfcwtjbh" path="res://assets/sprites/entities/Skeleton.png" id="3_6bfe6"]
[ext_resource type="Script" uid="uid://b4e158hic5jg3" path="res://scripts/bpm_based_step_animation.gd" id="4_wxhic"]
[ext_resource type="Texture2D" uid="uid://cjo64o6bn1gmt" path="res://assets/sprites/attacks/Cleave.png" id="5_6bfe6"]
[ext_resource type="Texture2D" uid="uid://cq73tgnyk52d6" path="res://assets/sprites/misc/Indicator.png" id="5_xecti"]
[ext_resource type="Texture2D" uid="uid://bpbl3p580kxkr" path="res://assets/sprites/misc/Internal_Arrows.png" id="7_wxhic"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n763p"]
radius = 14.3178215

[sub_resource type="AtlasTexture" id="AtlasTexture_wxhic"]
atlas = ExtResource("3_6bfe6")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtc0r"]
atlas = ExtResource("3_6bfe6")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6a3e"]
atlas = ExtResource("3_6bfe6")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5r6u"]
atlas = ExtResource("3_6bfe6")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylyo2"]
atlas = ExtResource("3_6bfe6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t7ph"]
atlas = ExtResource("3_6bfe6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2ebm"]
atlas = ExtResource("3_6bfe6")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1su5"]
atlas = ExtResource("3_6bfe6")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwcqj"]
atlas = ExtResource("3_6bfe6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4c3k"]
atlas = ExtResource("3_6bfe6")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahw5l"]
atlas = ExtResource("3_6bfe6")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_saudc"]
atlas = ExtResource("3_6bfe6")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v35a0"]
atlas = ExtResource("3_6bfe6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrxh2"]
atlas = ExtResource("3_6bfe6")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tofne"]
atlas = ExtResource("3_6bfe6")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fdu5"]
atlas = ExtResource("3_6bfe6")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyj2r"]
atlas = ExtResource("3_6bfe6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvknn"]
atlas = ExtResource("3_6bfe6")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iict3"]
atlas = ExtResource("3_6bfe6")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y3e0"]
atlas = ExtResource("3_6bfe6")
region = Rect2(96, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ixvfu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxhic")
}],
"loop": false,
"name": &"atk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtc0r")
}],
"loop": false,
"name": &"atk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6a3e")
}],
"loop": false,
"name": &"atk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5r6u")
}],
"loop": false,
"name": &"atk_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylyo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t7ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2ebm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1su5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwcqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4c3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahw5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_saudc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v35a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrxh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tofne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fdu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyj2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvknn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iict3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y3e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxhic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6a3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5r6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtc0r")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylyo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t7ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2ebm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1su5")
}],
"loop": true,
"name": &"walk_down",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyj2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvknn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iict3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y3e0")
}],
"loop": true,
"name": &"walk_left",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwcqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4c3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahw5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_saudc")
}],
"loop": true,
"name": &"walk_right",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v35a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrxh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tofne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fdu5")
}],
"loop": true,
"name": &"walk_up",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xecti"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6bfe6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gml38"]
atlas = ExtResource("7_wxhic")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vtc0r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gml38")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[node name="SweepEnemy" type="CharacterBody2D" unique_id=141113670]
script = ExtResource("1_igua1")

[node name="Line2D" type="Line2D" parent="." unique_id=821246944]
top_level = true
default_color = Color(1, 0, 0.007843138, 1)
texture = ExtResource("2_xecti")
texture_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1771081340]
shape = SubResource("CircleShape2D_n763p")

[node name="Sprite2D" type="AnimatedSprite2D" parent="." unique_id=23198620]
sprite_frames = SubResource("SpriteFrames_ixvfu")
animation = &"atk_down"
script = ExtResource("4_wxhic")

[node name="AtkWarn" type="Sprite2D" parent="." unique_id=411718262]
visible = false
modulate = Color(1, 1, 1, 0.7058824)
texture = ExtResource("5_xecti")

[node name="AtkBox" type="Area2D" parent="AtkWarn" unique_id=2099583041]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AtkWarn/AtkBox" unique_id=866259490]
shape = SubResource("RectangleShape2D_xecti")

[node name="AtkWarn2" type="Sprite2D" parent="." unique_id=385064519]
visible = false
modulate = Color(1, 1, 1, 0.7058824)
texture = ExtResource("5_xecti")

[node name="AtkBox" type="Area2D" parent="AtkWarn2" unique_id=1707218161]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AtkWarn2/AtkBox" unique_id=1121468537]
shape = SubResource("RectangleShape2D_6bfe6")

[node name="AtkWarn3" type="Sprite2D" parent="." unique_id=2096966666]
visible = false
modulate = Color(1, 1, 1, 0.7058824)
texture = ExtResource("5_xecti")

[node name="AtkBox" type="Area2D" parent="AtkWarn3" unique_id=173197232]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AtkWarn3/AtkBox" unique_id=926579248]
shape = SubResource("RectangleShape2D_6bfe6")

[node name="Pivot" type="Node2D" parent="." unique_id=1276249440]
visible = false

[node name="Cleave" type="Sprite2D" parent="Pivot" unique_id=154573567]
modulate = Color(1, 1, 1, 0.7058824)
position = Vector2(0, 32)
texture = ExtResource("5_6bfe6")

[node name="MovePivot" type="Node2D" parent="." unique_id=980210416]
visible = false

[node name="Arrow" type="AnimatedSprite2D" parent="MovePivot" unique_id=1912697335]
position = Vector2(0, 12)
sprite_frames = SubResource("SpriteFrames_vtc0r")
autoplay = "default"
